text alignment & corrected flip transition

--- a/src/app.css
+++ b/src/app.css
@@ -10,8 +10,26 @@ body {
     border-radius: .25rem;
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, .3);
     background-color: white;
+    transform-style: preserve-3d;
     height: 150px;
     width: 150px;
+    transition: 150ms;
+    cursor: pointer;
+    transform: perspective(1000px) rotateY(var(--rotate-y, 0)) 
+    translateY(var(--translate-y, 0));
+}
+
+.card:hover{
+    --translate-y: -2px;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, .6);
+}
+
+.card.flip {
+    --rotate-y: 180deg;
+}
+
+.card .front{
+    left: 0;
 }
 
 .card .front,
@@ -22,5 +40,19 @@ body {
 }
 
 .card .back{
-    transform: rotateY('180deg');
+    transform: rotateY(180deg);
+}
+
+.flashcard-options {
+    margin-top: .5rem;
+}
+
+.flashcard-option {
+    margin-top: .25rem;
+    color: #555;
+    font-size: .75rem;
+}
+
+.flashcard-option:first-child{
+    margin-top: 0;
 }
